[CORRECTION][ECRAN MES INFORMATIONS][MODIFICATION DU PROFIL] Aligne sur une seule ligne les boutons radios avec leur label

--- a/mon-aide-cyber-ui/src/domaine/espace-aidant/mon-compte/ecran-mes-preferences/ecran-mes-preferences.scss
+++ b/mon-aide-cyber-ui/src/domaine/espace-aidant/mon-compte/ecran-mes-preferences/ecran-mes-preferences.scss
@@ -68,16 +68,17 @@
   }
 }
 
-/*.fr-checkbox-group input[type=checkbox]+label {
-    margin-left: 0;
-}*/
+.champ-radio-conteneur {
+  > label {
+    display: flex;
+    gap: 1rem;
+  }
+}
 
 .mac-checkbox {
-
   .mac-checkbox-box {
     display: flex;
     justify-content: center;
     align-items: center;
   }
-
 }
